# ChangeLog for gnome-extra/fast-user-switch-applet
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/fast-user-switch-applet/ChangeLog,v 1.7 2006/05/18 14:36:51 tcort Exp $

  18 May 2006; Thomas Cort <tcort@gentoo.org>
  fast-user-switch-applet-2.14.1.ebuild:
  Added ~alpha keyword wrt Bug #125233.

  05 May 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  fast-user-switch-applet-2.14.1.ebuild:
  Added to ~hppa, bug #125233

  04 May 2006; Markus Rothe <corsair@gentoo.org>
  fast-user-switch-applet-2.14.1.ebuild:
  Added ~ppc64

*fast-user-switch-applet-2.14.1 (01 May 2006)

  01 May 2006; Daniel Gryniewicz <dang@gentoo.org>
  +fast-user-switch-applet-2.14.1.ebuild:
  Bump for 2.14.1

  07 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  fast-user-switch-applet-2.14.0.ebuild:
  Added to ~ppc, bug #125233

  23 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  fast-user-switch-applet-2.14.0.ebuild:
  Keyworded ~sparc wrt 125233

*fast-user-switch-applet-2.14.0 (17 Mar 2006)

  17 Mar 2006; John N. Laliberte <allanonjl@gentoo.org>
  +fast-user-switch-applet-2.14.0.ebuild:
  new package for 2.14.
