@@ -1,0 +1,3 @@
+MD5 590e51fbc9dfa7e33a337d36349cf040 fast-user-switch-applet-2.14.2.tar.bz2 497832
+RMD160 d469ef520998dead060d64b38bb710c350b957f4 fast-user-switch-applet-2.14.2.tar.bz2 497832
+SHA256 1e5b7e2ebeb54b828f00dc3e6e6387ea10d3b47df6c73f7c722b26cf3fcf147f fast-user-switch-applet-2.14.2.tar.bz2 497832
