@@ -1,6 +1,14 @@
 # ChangeLog for gnome-extra/fast-user-switch-applet
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/fast-user-switch-applet/ChangeLog,v 1.7 2006/05/18 14:36:51 tcort Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/fast-user-switch-applet/ChangeLog,v 1.8 2006/06/30 18:51:00 allanonjl Exp $
+
+*fast-user-switch-applet-2.14.2 (30 Jun 2006)
+
+  30 Jun 2006; John N. Laliberte <allanonjl@gentoo.org>
+  -fast-user-switch-applet-2.14.0.ebuild,
+  -fast-user-switch-applet-2.14.1.ebuild,
+  +fast-user-switch-applet-2.14.2.ebuild:
+  new version, fixes #138226
 
   18 May 2006; Thomas Cort <tcort@gentoo.org>
   fast-user-switch-applet-2.14.1.ebuild:
